# django-chroniker

./: .gitignore  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
chroniker/: __init__.py  admin.py  models.py  settings.py  utils.py
chroniker/management/commands/: cron.py
chroniker/migrations/: 0001_initial.py  0004_auto_20240403_1154.py
chroniker/tests/: commands.py  settings.py  tests.py
chroniker/tests/management/commands/: test_sleeper.py
