[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-chroniker"
dynamic = ["version"]
description = "Easily control cron jobs via Django's admin."
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "Chris Spencer", email = "chrisspen@gmail.com" },
    { name = "Draft2Digital", email = "chrisspen@gmail.com" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Framework :: Django"
]
requires-python = ">=3.4"
dependencies = [
    "python-dateutil>=2.2",
    "psutil>=2.1.1",
    "toposort>=1.0",
    "Django>=2.2"
]

[project.urls]
Homepage = "https://github.com/draft2digital/django-chroniker"

[project.optional-dependencies]
tests = [
    "tox>=2.0.0",
    "django-admin-steroids>=0.4.0",
]

[tool.setuptools.package-data]
"*" = ["docs/*.txt", "docs/*.py"]
chroniker = [
    "static/*/*/*.*",
    "templates/*.*",
    "templates/*/*.*",
    "templates/*/*/*.*",
    "templates/*/*/*/*.*",
    "fixtures/*",
    "tests/fixtures/*"
]

[tool.setuptools.dynamic]
version = { attr = "chroniker.__version__" }
